--- a/doc/css/m-dip+documentation.compiled.css
+++ b/doc/css/m-dip+documentation.compiled.css
@@ -1894,7 +1894,8 @@ div.m-plot:last-child, div.m-plot.m-nopadb,
 div.m-code:last-child, div.m-plot.m-nopadb {
   margin-bottom: 0;
 }
-li > p:last-child, li > blockquote:last-child, li > pre:last-child,
+li > p:last-child, li > ul:last-child, li > ol:last-child,
+li > dl:last-child, li > blockquote:last-child, li > pre:last-child,
 li > .m-code-figure:last-child, li > .m-console-figure:last-child,
 li > .m-note:last-child, li > .m-frame:last-child, li > .m-block:last-child,
 li > div.m-button:last-child, li > div.m-scroll:last-child, li > table.m-table:last-child,
@@ -1905,6 +1906,9 @@ li > div.m-code:last-child {
   margin-bottom: 1rem;
 }
 li:last-child > p:last-child, li:last-child > p.m-nopadb,
+li:last-child > ul:last-child, li:last-child > ul.m-nopadb,
+li:last-child > ol:last-child, li:last-child > ol.m-nopadb,
+li:last-child > dl:last-child, li:last-child > dl.m-nopadb,
 li:last-child > blockquote:last-child, li:last-child > blockquote.m-nopadb,
 li:last-child > pre:last-child, li:last-child > pre.m-nopadb,
 li:last-child > .m-code-figure:last-child, li:last-child > .m-code-figure.m-nopadb,
